CORE-653 - Changed fixed nav positioning to use transform instead of top for better performance. Also changed styling to position:fixed on small screens as catching mobile scrolling is not effective

--- a/css/navigation.less
+++ b/css/navigation.less
@@ -18,4 +18,9 @@ permissions and limitations under the License.
         z-index: 1100;
     }
 
+    .nav-fixed {
+        position: fixed;
+        width: 100%;
+    }
+
 }
